--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     background-color: #3F403F;
 }
 
+h1  {
+    font-family: "Ink Free";
+    white-space: nowrap;
+    font-size: 1.75rem;
+}
+
 .container {
     background-color: #FFFCF2;
     padding: 2rem;
@@ -32,6 +38,7 @@ form select,button,input {
 
 form input {
 border: 1px solid #CCC5B9;
+border-radius: 0.5rem;
 font-size: 1rem;
 padding-left: 0.5rem;
 height: 3rem;
@@ -69,6 +76,9 @@ height: 3rem;
 
 .msg {
     margin: 2rem 0 2rem 0;
+    font-family:'Ink Free'; 
+    font-weight: bolder; 
+    font-size: 1.25rem;
 }
 
 form button {
@@ -78,4 +88,9 @@ form button {
     color: #261C15;
     font-size: 1.15rem;
     cursor: pointer;
+    
+}
+form button:hover {
+    transform: scale(1.01); 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); 
 }
